Change index.html and style.css

--- a/index.html
+++ b/index.html
@@ -392,16 +392,21 @@
     </section>
     <section class="tell-about-us">
         <div class="container">
-            <div class="share-image"> <img src="images/Share.png" alt="share about us" />
-                <p>tell about us:</p>
-            </div>
-            <div class="share-social">
-                <div class="share-icons"> <i class="fa fa-twitter fa-icons" aria-hidden="true"></i>
-                    <p> 152</p> <i class="fa fa-linkedin fa-icons" aria-hidden="true"></i>
-                    <p> 31</p> <i class="fa fa-facebook fa-icons" aria-hidden="true"></i>
-                    <p> 165</p> <i class="fa fa-google-plus fa-icons" aria-hidden="true"></i>
-                    <p> 22</p> <i class="fa fa-pinterest-p fa-icons" aria-hidden="true"></i>
-                    <p> 165</p>
+            <div class="row">
+                <div class="col-lg-2 share-image"> <img src="images/Share.png" alt="share about us" />
+                    <p>tell about us:</p>
+                </div>
+                <div class="share-icons">
+                    <div class="col-lg-2 share-social twitter"> <i class="fa fa-twitter fa-icons" aria-hidden="true"></i> </div>
+                    <p>152</p>
+                    <div class="col-lg-2 share-social linkedin"><i class="fa fa-linkedin fa-icons" aria-hidden="true"></i> </div>
+                    <p>31</p>
+                    <div class="col-lg-2 share-social facebook"><i class="fa fa-facebook fa-icons" aria-hidden="true"></i> </div>
+                    <p>165</p>
+                    <div class="col-lg-2 share-social google-plus"><i class="fa fa-google-plus fa-icons" aria-hidden="true"></i> </div>
+                    <p>22</p>
+                    <div class="col-lg-2 share-social pinterest"><i class="fa fa-pinterest-p fa-icons" aria-hidden="true"></i> </div>
+                    <p>165</p>
                 </div>
             </div>
         </div>
