Add section tell about us

--- a/index.html
+++ b/index.html
@@ -398,15 +398,19 @@
                 </div>
                 <div class="share-icons">
                     <div class="col-lg-2 share-social twitter"> <i class="fa fa-twitter fa-icons" aria-hidden="true"></i> </div>
-                    <p>152</p>
-                    <div class="col-lg-2 share-social linkedin"><i class="fa fa-linkedin fa-icons" aria-hidden="true"></i> </div>
-                    <p>31</p>
-                    <div class="col-lg-2 share-social facebook"><i class="fa fa-facebook fa-icons" aria-hidden="true"></i> </div>
-                    <p>165</p>
-                    <div class="col-lg-2 share-social google-plus"><i class="fa fa-google-plus fa-icons" aria-hidden="true"></i> </div>
-                    <p>22</p>
-                    <div class="col-lg-2 share-social pinterest"><i class="fa fa-pinterest-p fa-icons" aria-hidden="true"></i> </div>
-                    <p>165</p>
+                    <div class="social-number">152</div>
+                </div>
+                <div class="share-icons">
+                    <div class="col-lg-2 share-social linkedin"> <i class="fa fa-linkedin fa-icons" aria-hidden="true"></i> </div>
+                    <div class="social-number">31</div>
+                </div>
+                <div class="share-icons">
+                    <div class="col-lg-2 share-social google-plus"> <i class="fa fa-google-plus fa-icons" aria-hidden="true"></i> </div>
+                    <div class="social-number">22</div>
+                </div>
+                <div class="share-icons">
+                    <div class="col-lg-2 share-social pinterest"> <i class="fa fa-pinterest fa-icons" aria-hidden="true"></i> </div>
+                    <div class="social-number">165</div>
                 </div>
             </div>
         </div>
