Add new section contact-us

--- a/index.html
+++ b/index.html
@@ -13,13 +13,15 @@
     <header>
         <nav class="container">
             <div class="row"> <img src="images/Logo.png" alt="Logo Awax">
-                <div class="burger">
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                </div>
+                <!--
+<div class="burger">
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+</div>
+-->
                 <ul>
                     <li class="list"><a class="line" href="#">Home</a></li>
                     <li class="list"><a class="line" href="#">About us</a></li>
@@ -413,6 +415,31 @@
                     <div class="social-number">165</div>
                 </div>
             </div>
+        </div>
+    </section>
+    <section class="contact-us">
+        <div class="container">
+            <div class="contact-form">
+                <h2 class="contact-title">contact us</h2>
+                <h3 class="contact-subtitle">our agency located in Melbourne, Australia</h3>
+                <div class="row contact-element">
+                    <div class="col-lg-6 col-m-6 col-s-12">
+                        <label for="name"></label>
+                        <input type="text" id="name" placeholder="NAME" required> </div>
+                    <div class="col-lg-6 col-m-6 col-s-12">
+                        <label for="mail"></label>
+                        <input type="email" id="mail" placeholder="EMAIL" required> </div>
+                </div>
+                <div class="form-subject">
+                    <label for="subject"></label>
+                    <input type="text" id="subject" placeholder="SUBJECT" required> </div>
+                <div class="form-msg">
+                    <label for="msg"></label>
+                    <input type="text" id="msg" placeholder="MESSEGE"> </div>
+            </div>
+        </div>
+        <div class="contact-element">
+            <button class="contact-button">send message</button>
         </div>
     </section>
 </body>
