--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
 -->
                 <ul>
                     <li class="list"><a class="line" href="#">Home</a></li>
-                    <li class="list"><a class="line" href="#">About us</a></li>
-                    <li class="list"><a class="line" href="#">Services</a></li>
-                    <li class="list"><a class="line" href="#">Our projects</a></li>
-                    <li class="list"><a class="line" href="#">Happy clients</a></li>
-                    <li class="list"><a class="line" href="#">Price</a></li>
-                    <li class="list"><a class="line" href="#">Some Facts</a></li>
-                    <li class="list"><a class="line" href="#">Contact us</a></li>
+                    <li class="list"><a class="line" href="#about-us">About us</a></li>
+                    <li class="list"><a class="line" href="#services">Services</a></li>
+                    <li class="list"><a class="line" href="#our-project">Our projects</a></li>
+                    <li class="list"><a class="line" href="#our-clients">Happy clients</a></li>
+                    <li class="list"><a class="line" href="#price">Price</a></li>
+                    <li class="list"><a class="line" href="#some-facts">Some Facts</a></li>
+                    <li class="list"><a class="line" href="#contact">Contact us</a></li>
                 </ul>
             </div>
         </nav>
@@ -453,6 +453,30 @@
             </div>
         </div>
     </section>
+    <footer class="section-footer">
+        <div class="container">
+            <div class="footer-content">
+                <div class="footer-element">
+                    <div class="row">
+                        <div class="col-lg-5 footer-social">
+                            <div class="footer-icons"> <i class="fa fa-icon-dark fa-twitter" aria-hidden="true"></i> <i class="fa fa-icon-dark fa-instagram" aria-hidden="true"></i> <i class="fa fa-icon-dark fa-linkedin" aria-hidden="true"></i> <i class="fa fa-icon-dark fa-facebook" aria-hidden="true"></i> <i class="fa fa-icon-dark fa-youtube-play" aria-hidden="true"></i> <i class="fa fa-icon-dark fa-google-plus" aria-hidden="true"></i> <i class="fa fa-icon-dark fa-ellipsis-h" aria-hidden="true"></i></div>
+                            <p class="footer-copy">AWAX &copy; 2016</p>
+                        </div>
+                        <div class="footer-description">
+                            <p class="col-lg-3 footer-note"> Nulla iaculis enim a magna tempor congue. Sed aliquam dignissim hendrerit. Duis erat nulla, pellentesque at enim in, scelerisque placerat nunc. Nulla vestibulum ex sed neque auctor rutrum. Donec fringilla tincidunt aliquet. Nullam rhoncus urna massa, vulputate congue velit pulvinar suscipit. Mauris laoreet blandit pharetra. Suspendisse rutrum dolor at augue convallis, eget dapibus nunc consequat. Sed diam nulla, elementum non laoreet eu,vulputate urna, at pellentesque risus orci in ante. </p>
+                        </div>
+                        <div class="col-lg-4 footer-news">
+                            <form class="footer-newsletter">
+                                <input id="email" type="email" name="email" placeholder="Email to subscribe" class="newsletter-input" required>
+                                <button class="footer-button">subscribe</button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <a href="#" class="round-up" title="Up, up and go!"> <img src="/images/ScrollUp.png" class="round-img" alt=""> </a>
+        </div>
+    </footer>
 </body>
 
 </html>
